--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,6 @@ yarn-error.log*
 next-env.d.ts
 
 node_modules
-.env
-.env.production
-.env.development
+# .env
+# .env.production
+# .env.development
